--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "text": [
       "../datasets/csvs/zhou_valid.csv\n",
-      "../outputs/bilstm_crf/lr1.00e-05_hs512x64_ctx-p1_wang2vec_s100/00/Yhat_valid.csv\n"
+      "../outputs/dblstm_crf/lr5.00e-04_hs256x64_ctx-p1_glove_s50/00/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -36,8 +36,8 @@
     "\n",
     "\n",
     "\n",
-    "MODEL_NAME='bilstm_crf'\n",
-    "HPARAMS_STR='lr1.00e-05_hs512x64_ctx-p1_wang2vec_s100'\n",
+    "MODEL_NAME='dblstm_crf'\n",
+    "HPARAMS_STR='lr5.00e-04_hs256x64_ctx-p1_glove_s50'\n",
     "MODEL_V= '00'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "      <td>rei</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*</td>\n",
+       "      <td>*)</td>\n",
        "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -245,8 +245,8 @@
        "      <td>rei</td>\n",
        "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
-       "      <td>*</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>(V*)</td>\n",
+       "      <td>V</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123850</th>\n",
@@ -267,8 +267,8 @@
        "      <td>rei</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>*</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>(A1*</td>\n",
+       "      <td>A1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -287,12 +287,12 @@
        "IDX                                                                      \n",
        "123846       o  convidado       o       -     rei  (A2*    A2  (A2*  A2  \n",
        "123847       o  convidado       o       -     rei     *    A2     *  A2  \n",
-       "123848       o  convidado       o       -     rei    *)    A2     *  A2  \n",
-       "123849       o  convidado       o       -     rei  (V*)     V     *  A2  \n",
-       "123850       o  convidado       o       -     rei  (A1*    A1     *  A2  "
+       "123848       o  convidado       o       -     rei    *)    A2    *)  A2  \n",
+       "123849       o  convidado       o       -     rei  (V*)     V  (V*)   V  \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1  (A1*  A1  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -370,137 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if __name__ == '__main__':\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FUNC</th>\n",
-       "      <th>ARG0</th>\n",
-       "      <th>ARG1</th>\n",
-       "      <th>ARG2</th>\n",
-       "      <th>ARG3</th>\n",
-       "      <th>ARG4</th>\n",
-       "      <th>ARG5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-</td>\n",
-       "      <td>(A2*</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>estar</td>\n",
-       "      <td>*</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -  (A2*                         \n",
-       "1      -     *                         \n",
-       "2      -     *                         \n",
-       "3  estar     *                         \n",
-       "4      -     *                         "
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "dfconll = outputs_conll(df)\n",
-    "dfconll.to_csv(TARGET_EVALUATION_PATH, sep= '\\t', index=False, header=False)\n",
-    "dfconll.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " # 4. Make Gold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +479,137 @@
        "4      -  (A1*                         "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "dfconll = outputs_conll(df)\n",
+    "dfconll.to_csv(TARGET_EVALUATION_PATH, sep= '\\t', index=False, header=False)\n",
+    "dfconll.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " # 4. Make Gold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FUNC</th>\n",
+       "      <th>ARG0</th>\n",
+       "      <th>ARG1</th>\n",
+       "      <th>ARG2</th>\n",
+       "      <th>ARG3</th>\n",
+       "      <th>ARG4</th>\n",
+       "      <th>ARG5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-</td>\n",
+       "      <td>(A2*</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-</td>\n",
+       "      <td>*</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-</td>\n",
+       "      <td>*)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>estar</td>\n",
+       "      <td>(V*)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-</td>\n",
+       "      <td>(A1*</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -  (A2*                         \n",
+       "1      -     *                         \n",
+       "2      -    *)                         \n",
+       "3  estar  (V*)                         \n",
+       "4      -  (A1*                         "
+      ]
+     },
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
